dropdown menu style fixed on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,14 +7,12 @@
     border: none;
 }
 
-/* The container <div> - needed to position the dropdown content */
+/* Dropdown Content */
 
 .dropdown {
     position: relative;
     display: inline-block;
 }
-
-/* Dropdown Content (Hidden by Default) */
 
 .dropdown-content {
     display: none;
@@ -38,6 +36,8 @@
 
 .dropdown:hover .dropdown-content {
     display: block;
+    left: auto;
+    right: 0;
 }
 
 .dropdown:hover .categories_dropbtn {
@@ -63,5 +63,9 @@
         position: absolute;
         left: 50%;
         transform: translatex(-50%);
+    }
+    .dropdown:hover .dropdown-content {
+        left: 0;
+        right: auto;
     }
 }
